--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 h1 {
     color: rgb(13, 13, 155);
+    font-size: 16px;
 }
+
+a {
+    font-size: 10px;
+    text-decoration: none;
+    color: rgb(255, 255, 2);
+    background-color: blue;
+}
+
